--- a/TMP_Litter.Rmd
+++ b/TMP_Litter.Rmd
@@ -315,13 +315,14 @@ litter_adjusted %>%
   mutate(All_Leaf_perday = All_Leaf / elapsed_days) ->
   litter_adj_perday
 
+# generating the sequence of dates from min day collected to max
 days_wanted_adj <- seq(from = min(litter_adj_perday$Date_collected), 
                    to = max(litter_adj_perday$Date_collected), 
                    by = "day")
 
 litter_adj_perday %>%
   complete(Plot, Trap, Date_collected = days_wanted_adj) %>%
-  mutate(All_Leaf = na.approx(All_Leaf, na.rm = FALSE)) ->
+  mutate(All_Leaf_perday = na.approx(All_Leaf_perday, na.rm = FALSE)) ->
   litter_adj_perday_complete
 
 # ALICE: I have simplified things above and changed it so we're not
@@ -330,8 +331,9 @@ litter_adj_perday %>%
 
 # 2. plot
 
-# ggplot(litter_C_A_adj_allyrs, aes(x = Date_collected, y = All_Leaf)) +
-#   geom_point()
+ggplot(litter_adj_perday_complete, aes(x = Date_collected, y = All_Leaf_perday, color = Plot)) +
+  geom_point() +
+  facet_grid(Plot ~ .)
 
 
 # Annual flux by plot and trap
@@ -340,8 +342,12 @@ litter_adj_perday_complete %>%
 # group by plot, trap, year
   group_by(Plot, Trap, Year) %>%
 # sum up the daily fluxes to an annual values
-  summarise(All_Leaf_peryear = sum(All_Leaf), .groups = "drop") ->
+  summarise(All_Leaf_peryear = sum(All_Leaf_perday), .groups = "drop") ->
   litter_annual_fluxes
+
+# boxplot
+ggplot(litter_annual_fluxes, aes(x = Year, y = All_Leaf_peryear, color = Plot, group = paste(Year, Plot))) +
+  geom_boxplot()
 
 # ALICE: 
 # 1. Look at the resulting dataset computed above. Do the columns and rows make sense?
@@ -350,5 +356,47 @@ litter_adj_perday_complete %>%
 # plot
 # ggplot(aes(Year, All_Leaf_peryear, color = Plot)) + geom_point() + geom_line()
 
+
+# play around with different visualizations
+
+# histogram
+
+ggplot(litter_annual_fluxes, aes(x = Year, y = All_Leaf_peryear, color = Plot, group = paste(Year, Plot))) +
+  scale_color_manual(values = c("green", "blue", "red")) +
+  geom_boxplot()
+
+
+```
+
+```{r}
+##LITU's
+litter_adjusted %>%
+  arrange(Date_collected) %>%
+  group_by(Plot, Trap) %>% 
+  # compute the difference between collection dates. For a series of
+  # size n, diff() returns n-1 intervals, so we add one NA at the front
+  # because the first date has no elapsed time (since no previous date)
+  mutate(elapsed_days = c(NA, diff(Date_collected))) %>% 
+  ungroup() %>%
+  arrange(Plot, Trap, Date_collected) %>% 
+  ## finally compute flux: litter per day
+  mutate(Leaf_LITU_perday = Leaf_LITU / elapsed_days) ->
+  litter_adj_LITU_perday
+
+
+# generating the sequence of dates from min day collected to max
+days_wanted_adj <- seq(from = min(litter_adj_LITU_perday$Date_collected), 
+                   to = max(litter_adj_LITU_perday$Date_collected), 
+                   by = "day")
+
+litter_adj_LITU_perday %>%
+  complete(Plot, Trap, Date_collected = days_wanted_adj) %>%
+  mutate(LITU_perday = na.approx(Leaf_LITU_perday, na.rm = FALSE)) ->
+  litter_adj_LITU_perday_complete
+
+ggplot(litter_adj_LITU_perday_complete, aes(x = Date_collected, y = Leaf_LITU_perday, color = Plot)) +
+  geom_point() +
+  scale_color_manual(values = c("green", "blue", "red")) +
+  facet_grid(Plot ~ .)
 ```
 
